# llm_mem_new

./: .gitignore  centralised_training.py  client.py  client_manager.py  data_formatting.py  data_properties_get.py  data_size_checker.py  deduplicate.py  evalaute_server.py  evaluate_server.py  find_largest_batchsize.py  finetune.py  log_file  out.txt  plot_max_sequence_lengths.py  pyproject.toml  remove_long_samples.py  s3_upload.py  simulate_federated_learning.py  slurm_cent.mauao  slurm_cent.ruapehu  slurm_cent.sh  slurm_fl.mauao  slurm_fl.ruapehu  slurm_fl.sh  startegy.py  table.csv  testing.py  utils.py
config/: config copy.yaml  config.yaml  config_cent.yaml  defaults.yaml
results/: NVIDIA A40_EleutherAI_pythia-125m_results.csv  NVIDIA H100 NVL_EleutherAI_pythia-125m_results.csv  NVIDIA H100 NVL_EleutherAI_pythia-125m_results1.csv  Tesla V100-PCIE-32GB_EleutherAI_pythia-125m_results.csv  table.md
scripts/: slurm_cent.mauao  slurm_cent.ruapehu  slurm_fl.mauao  slurm_fl.ruapehu  slurm_fl_loop.mauao  slurm_fl_loop.py  slurm_fl_template.mauao  slurm_fl_template.template  slurm_sim.ruapehu  slurm_template.template  submit_and_chain.sh
tmp/checkpoint-1/: README.md
utils/: convert_jsonl_to_json.py  data_properties_get.py  deduplicate.py  extract_values.py  find_largest_batchsize.py  merge_json.py  parquet_to_json.py  remove_empty_entries.py  remove_long_samples.py  show_unique_keys.py  validation_set.py
